# webserv

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  Cookies.org  Makefile  Notes_kay.org  README.md  README.org  needed functions & explanations.canvas
.obsidian/: workspace.json
config/: default.conf
config-test/: test.sh
configs/: default.conf
erik_test/: test.sh
includes/: BadRequestHandler.h  BodyParser.h  Buffer.h  CgiHandler.h  ConfigParser.h  ConfigStructure.h  Connection.h  ConnectionHandler.h  DeleteHandler.h  EPollManager.h  EpollIONotifier.h  GetHandler.h  HttpParser.h  HttpRequest.h  HttpResponse.h  IConfigParser.h  IConnectionHandler.h  IHttpParser.h  IHttpParsing.h  IIONotifier.h  IRouter.h  IValidationRules.h  Listener.h  Logger.h  PingHandler.h  PostHandler.h  ResponseWriter.h  Route.h  RouteConfig.h  Router.h  Server.h  ServerBuilder.h  Socket.h  SystemClock.h  SystemSender.h  TokenStream.h  UploadHandler.h  ValidationRules.h  _Colors.h  handlerUtils.h  (+4 more)
includes.bak/: ILogger.h  Server.h  Server.h.bak
kay_test/: fileToUpload.txt  test.sh
roam/: 20250406162028-webserv.org  20250406163108-telnet.org  20250406163447-reverse_proxy_server.org  20250406163725-ssl_termination.org  20250406183020-http.org  20250406191502-uri.org  20250406201729-poll.org  20250407150408-backus_naur_form_bnf.org  20250407152617-http_message.org  20250407172453-crlf.org  20250407174200-generic_message.org  20250407182001-extended_bnf.org  20250407182206-standard_bnf_terminals.org  20250408172319-resources.org  20250408223006-ports.org  20250408225731-cgi.org  20250409073821-web_server.org  20250409075639-socket_programming.org  20250409201137-nginx.org  20250411145638-asynchronous_i_o_communication.org  20250411190949-callback_function.org  20250411191511-select.org  20250412174900-byte_order.org  20250412175357-socket_library_function.org  20250412193452-addrinfo.org  20250412195826-addresses.org  20250412201025-network_address_translation.org  20250412212947-getaddrinfo.org  20250412220326-hostname.org  20250412220808-dns_domain_name_system.org  20250413094527-bind_system_call.org  20250413105855-socket_programming_api.org  20250413110035-setsockopt.org  20250413111456-connect_system_call.org  20250413112122-listen_system_call.org  20250413113139-accept_system_call.org  20250413133550-fcntl.org  20250415160541-epoll.org  20250422141653-send_system_call.org  20250422143516-recv_system_call.org
run/: main.cpp
sockets_tryout/: chat.org  client.cpp  connect_example.c  multiplexing.cpp  poll_input.c  select.c  (+2 more)
(+234 files in other folders)
